--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ sysinfo.txt
 crashlytics-build.properties
 
 Serious_Game/UserSettings/EditorUserSettings.asset
+Serious_Game/UserSettings/EditorUserSettings.asset
+Serious_Game/Assets/Scenes/LandMini.unity
